# MSIAutoEncoderWrapper

./: .gitignore  Dockerfile  LICENSE  README.md  model_architecture  pyproject.toml
.devcontainer/: devcontainer.json
docker_files/: Dockerfile_heavy  Dockerfile_light
docker_files/.devcontainer/: devcontainer.json
docs/: CUSTOM_MODELS.md
notebooks/: test_2.ipynb  tutorial2_decompress_image.ipynb
notebooks/prototypes/: test_ReverseModel.ipynb
notebooks/tutorials/: tutorial1_compression.ipynb  tutorial2_decompression.ipynb
scripts/download/: download.sh
src/IMSAutoEncoderWrapper/: __init__.py  dataset.py  model.py
src/IMSAutoEncoderWrapper/architectures/: ContrastiveAutoencoderMax_InverseDim.py  ContrastiveAutoencoderSkrajny.py  __init__.py  base.py
src/IMSAutoEncoderWrapper/criterions/: ContrastiveCriterion.py  __init__.py  base.py
src/IMSAutoEncoderWrapper/optimization/: trainer.py
src/MSIAutoEncoderWrapper/: __init__.py  dataset.py  model.py  wrapper.py
src/ims_contrastive_model/: __init__.py  architecture.py  architecture_old.py  dataloader.py  model.py  model_old.py  optimization.py  utils.py
src/ims_contrastive_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_architecture.py  test_architectures.py  test_binning.py  test_criterions.py  test_dataloader.py  test_latent_space_integrity.py  test_model.py
tutorials/: 1.ipynb  contrastive_learning.ipynb  new.ipynb  presentation.ipynb  test_1.ipynb  test_2.ipynb  tutorial1_compress_image.ipynb  tutorial1_new_version.ipynb  tutorial2_decompress_image.ipynb
(+21 files in other folders)
