[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "MSIAutoEncoderWrapper"
version = "0.0.1"
description = "MIMUW love forever - Autoencoder wrapper for IMS data"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]